# swe-glib

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  index.html  params.json  swe-glib.mk  swe-glib.pc.in
data/: Makefile.am  gschema.template  lots.py  lots.txt  swe-glib-1.0.1.spec  swe-glib-1.0.2.spec  swe-glib-1.0.spec  swe-glib.pc.in  swe-glib.spec.in
data/sweph-data/: s136199s.se1  se00010s.se1  se00034s.se1  se00157s.se1  se07066s.se1  se08405s.se1  se10199s.se1  se90377.se1  se90377s.se1  se90482.se1  se90482s.se1  seleapsec.txt
docs/reference/swe-glib/: Makefile.am  swe-glib-docs.xml  swe-glib-sections.txt  version.xml.in
examples/: basic.js  basic.lua  basic.pl  basic.py  basic.rb
exapmles/: basic.lua
po/: LINGUAS  POTFILES.in  hu.po
src/: Makefile.am  gswe-antiscion-axis-info-private.h  gswe-antiscion-axis-info.c  gswe-antiscion-axis-info.h  gswe-antiscion-data-private.h  gswe-antiscion-data.c  gswe-antiscion-data.h  gswe-aspect-data-private.h  gswe-aspect-data.c  gswe-aspect-data.h  gswe-aspect-info-private.h  gswe-aspect-info.c  gswe-aspect-info.h  gswe-enumtypes.c.template  gswe-enumtypes.h.template  gswe-house-data-private.h  gswe-house-data.c  gswe-house-data.h  gswe-house-system-info-private.h  gswe-house-system-info.c  gswe-house-system-info.h  gswe-lots.c  gswe-lots.h  gswe-moment.c  gswe-moment.h  gswe-moon-phase-data-private.h  gswe-moon-phase-data.c  gswe-moon-phase-data.h  gswe-planet-data-private.h  gswe-planet-data.c  gswe-planet-data.h  gswe-planet-info-private.h  gswe-planet-info.c  gswe-planet-info.h  gswe-sign-info-private.h  gswe-sign-info.c  gswe-sign-info.h  gswe-timestamp.c  gswe-timestamp.h  gswe-types.c  (+6 more)
swe/: README
swe/doc/: Makefile.am
swe/src/: Makefile.am
tests/: Makefile.am  gswe-timestamp-test.c  test-asserts.h
