pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = swe-glib.pc $(NULL)

swephdir = $(pkgdatadir)
sweph_DATA = \
	sweph-data/seas_00.se1 \
	sweph-data/seas_06.se1 \
	sweph-data/seas_12.se1 \
	sweph-data/seas_18.se1 \
	sweph-data/seas_24.se1 \
	sweph-data/seas_30.se1 \
	sweph-data/seas_36.se1 \
	sweph-data/seas_42.se1 \
	sweph-data/seas_48.se1 \
	sweph-data/seasm06.se1 \
	sweph-data/seasm12.se1 \
	sweph-data/seasm18.se1 \
	sweph-data/seasm24.se1 \
	sweph-data/seasm30.se1 \
	sweph-data/seasm36.se1 \
	sweph-data/seasm42.se1 \
	sweph-data/seasm48.se1 \
	sweph-data/seasm54.se1 \
	sweph-data/semo_00.se1 \
	sweph-data/semo_06.se1 \
	sweph-data/semo_12.se1 \
	sweph-data/semo_18.se1 \
	sweph-data/semo_24.se1 \
	sweph-data/semo_30.se1 \
	sweph-data/semo_36.se1 \
	sweph-data/semo_42.se1 \
	sweph-data/semo_48.se1 \
	sweph-data/semom06.se1 \
	sweph-data/semom12.se1 \
	sweph-data/semom18.se1 \
	sweph-data/semom24.se1 \
	sweph-data/semom30.se1 \
	sweph-data/semom36.se1 \
	sweph-data/semom42.se1 \
	sweph-data/semom48.se1 \
	sweph-data/semom54.se1 \
	sweph-data/sepl_00.se1 \
	sweph-data/sepl_06.se1 \
	sweph-data/sepl_12.se1 \
	sweph-data/sepl_18.se1 \
	sweph-data/sepl_24.se1 \
	sweph-data/sepl_30.se1 \
	sweph-data/sepl_36.se1 \
	sweph-data/sepl_42.se1 \
	sweph-data/sepl_48.se1 \
	sweph-data/seplm06.se1 \
	sweph-data/seplm12.se1 \
	sweph-data/seplm18.se1 \
	sweph-data/seplm24.se1 \
	sweph-data/seplm30.se1 \
	sweph-data/seplm36.se1 \
	sweph-data/seplm42.se1 \
	sweph-data/seplm48.se1 \
	sweph-data/seplm54.se1 \
	$(NULL)

EXTRA_DIST = \
			  $(sweph_DATA) \
			  swe-glib-$(SWE_GLIB_VERSION).spec

