lib_LTLIBRARIES = libswe-1.75.la
libswe_1_75_la_SOURCES = swedate.c swehouse.c swejpl.c swemmoon.c swemplan.c swepcalc.c sweph.c swepdate.c swephlib.c swecl.c swehel.c
libswe_1_75_la_CFLAGS = $(CFLAGS) -Wall
libswe_1_75_la_LIBADD = $(LIBS)

EXTRA_DIST = \
	LICENSE               \
	README                \
	swemptab.c            \
	swedate.h             \
	swedll.h              \
	swehouse.h            \
	swejpl.h              \
	swenut2000a.h         \
	sweodef.h             \
	swepcalc.h            \
	swephexp.h            \
	sweph.h               \
	swephlib.h            \
	fixstars.cat          \
	sedeltat.txt.inactive \
	sefstars.txt          \
	seleapsec.txt         \
	seorbel.txt           \
	$(NULL)
